--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -69,6 +69,7 @@ android {
         release {
             signingConfig signingConfigs.release
             shrinkResources false
+            minifyEnabled false
         }
         debug {
             ndk {
