--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -54,6 +54,10 @@ android {
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64'
         }
+        packagingOptions{
+            doNotStrip '*/mips/*.so'
+            doNotStrip '*/mips64/*.so'
+        }
     }
 
     signingConfigs {
