--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -55,8 +55,7 @@ android {
             abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64'
         }
         packagingOptions{
-            doNotStrip '*/mips/*.so'
-            doNotStrip '*/mips64/*.so'
+            doNotStrip '*'
         }
     }
 
